--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button>
+    <button (click)="onSelectedUser()" >
         <img [src]="imgPath" [alt]="user.name">
         <span>{{user.name}}</span>
     </button>
