--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
      }
   </div>
     @if (selectedUser) {
-      <app-tasks [name]="selectedUser.name"></app-tasks>
+      <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id" ></app-tasks>
     }@else {
       <p id="fallback">Select User</p>
     }
