--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,8 @@
-<!-- <article>
+<article>
     <h2>{{task.title}}</h2>
     <time>{{task.dueDate}}</time>
     <p>{{task.summary}}</p>
     <p class="actions">
         <button (click)="completeButton()" >Complete</button>
     </p>
-</article> -->
+</article>
