adding new-task - last update

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -3,6 +3,6 @@
     <time>{{task.dueDate}}</time>
     <p>{{task.summary}}</p>
     <p class="actions">
-        <button (click)="completeButton()" >Complete</button>
+        <button (click)="completeTaskButton()" >Complete</button>
     </p>
 </article>
