--- a/src/app/tasks/tasks/tasks.component.html
+++ b/src/app/tasks/tasks/tasks.component.html
@@ -1,4 +1,6 @@
-
+@if (isAddingTask) {
+    <app-new-task (cancel)="cancelButton()" ></app-new-task>
+}
 <section id="tasks" >
 
     <header>
@@ -6,7 +8,7 @@
  
 
         <menu>
-            <button>Add Task</button>
+            <button (click)="addTask()" >Add Task</button>
         </menu>
 
     </header>
