--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,20 +1,20 @@
 <div class="backdrop" (click)="cancelButton()" ></div>
 <dialog open>
   <h2>Add Task</h2>
-  <form >
+  <form (ngSubmit)="addingNewTas()" >
     <p>
       <label for="title">Title</label>
-      <input type="text" id="title" name="title" />
+      <input type="text" id="title" name="title" [(ngModel)]="enterTitle" />
     </p>
 
     <p>
       <label for="summary">Summary</label>
-      <textarea id="summary" rows="5" name="summary"  ></textarea>
+      <textarea id="summary" rows="5" name="summary" [(ngModel)]="enterSummary" ></textarea>
     </p>
 
     <p>
       <label for="due-date">Due Date</label>
-      <input type="date" id="due-date" name="due-date"/>
+      <input type="date" id="due-date" name="due-date" [(ngModel)]="enterDate"/>
     </p>
 
     <p class="actions">
